# LiveApplication

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dongnaoedu/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dongnaoedu/live/: MainActivity.java
app/src/main/java/com/dongnaoedu/live/jni/: PushNative.java
app/src/main/java/com/dongnaoedu/live/params/: VideoParams.java
app/src/main/java/com/dongnaoedu/live/pusher/: AudioPusher.java  LivePusher.java  VideoPusher.java
app/src/main/jni/: dn_live.c
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/test/java/com/dongnaoedu/live/: ExampleUnitTest.java
